; ModuleID = '/home/carl/AnghaBench/xLua/WebGLPlugins/extr_xlua.c_csharp_function_wrap.c'
source_filename = "/home/carl/AnghaBench/xLua/WebGLPlugins/extr_xlua.c_csharp_function_wrap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @csharp_function_wrap to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @csharp_function_wrap(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i32 (i32*)*, align 8
  %5 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = call i32 @lua_upvalueindex(i32 1)
  %8 = call i32 @lua_tocfunction(i32* %6, i32 %7)
  %9 = sext i32 %8 to i64
  %10 = inttoptr i64 %9 to i32 (i32*)*
  store i32 (i32*)* %10, i32 (i32*)** %4, align 8
  %11 = load i32 (i32*)*, i32 (i32*)** %4, align 8
  %12 = load i32*, i32** %3, align 8
  %13 = call i32 %11(i32* %12)
  store i32 %13, i32* %5, align 4
  %14 = load i32*, i32** %3, align 8
  %15 = call i32 @lua_upvalueindex(i32 2)
  %16 = call i64 @lua_toboolean(i32* %14, i32 %15)
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %26

18:                                               ; preds = %1
  %19 = load i32*, i32** %3, align 8
  %20 = call i32 @lua_pushboolean(i32* %19, i32 0)
  %21 = load i32*, i32** %3, align 8
  %22 = call i32 @lua_upvalueindex(i32 2)
  %23 = call i32 @lua_replace(i32* %21, i32 %22)
  %24 = load i32*, i32** %3, align 8
  %25 = call i32 @lua_error(i32* %24)
  store i32 %25, i32* %2, align 4
  br label %35

26:                                               ; preds = %1
  %27 = load i32*, i32** %3, align 8
  %28 = call i64 @lua_gethook(i32* %27)
  %29 = icmp ne i64 %28, 0
  br i1 %29, label %30, label %33

30:                                               ; preds = %26
  %31 = load i32*, i32** %3, align 8
  %32 = call i32 @call_ret_hook(i32* %31)
  br label %33

33:                                               ; preds = %30, %26
  %34 = load i32, i32* %5, align 4
  store i32 %34, i32* %2, align 4
  br label %35

35:                                               ; preds = %33, %18
  %36 = load i32, i32* %2, align 4
  ret i32 %36
}

declare dso_local i32 @lua_tocfunction(i32*, i32) #1

declare dso_local i32 @lua_upvalueindex(i32) #1

declare dso_local i64 @lua_toboolean(i32*, i32) #1

declare dso_local i32 @lua_pushboolean(i32*, i32) #1

declare dso_local i32 @lua_replace(i32*, i32) #1

declare dso_local i32 @lua_error(i32*) #1

declare dso_local i64 @lua_gethook(i32*) #1

declare dso_local i32 @call_ret_hook(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
